--- a/HW(Lesson 4-5 - figma)/Index.html
+++ b/HW(Lesson 4-5 - figma)/Index.html
@@ -68,28 +68,22 @@
             <h2>НАШИ САМЫЕ БОЛЬШИЕ ПРОЕКТЫ</h2>
             <div class="arena">
                 <div>
-                    <img src="/media/Rectangle 3.png" alt="Arena">
+                    <img src="./media/Rectangle 3.png" alt="Arena">
                     <div class="linie"></div>
                     <h3>Арена</h3>
-                    <p>Мы сделали самую красивую арену в Европе. Это открытие стало для нас прорывной точкой для
-                        разивтия на
-                        следующие десятилетия. Мы очень рады данному еву/</p>
+                    <p>Мы сделали самую красивую арену в Европе. Это открытие стало для нас прорывной точкой для разивтия на следующие десятилетия. Мы очень рады данному еву/</p>
                 </div>
                 <div>
-                    <img src="/media/Rectangle 3.png" alt="Arena">
+                    <img src="./media/Rectangle 3.png" alt="Arena">
                     <div class="linie"></div>
                     <h3>Арена</h3>
-                    <p>Мы сделали самую красивую арену в Европе. Это открытие стало для нас прорывной точкой для
-                        разивтия на
-                        следующие десятилетия. Мы очень рады данному еву/</p>
+                    <p>Мы сделали самую красивую арену в Европе. Это открытие стало для нас прорывной точкой для разивтия на следующие десятилетия. Мы очень рады данному еву/</p>
                 </div>
                 <div>
-                    <img src="/media/Rectangle 3.png" alt="Arena">
+                    <img src="./media/Rectangle 3.png" alt="Arena">
                     <div class="linie"></div>
                     <h3>Арена</h3>
-                    <p>Мы сделали самую красивую арену в Европе. Это открытие стало для нас прорывной точкой для
-                        разивтия на
-                        следующие десятилетия. Мы очень рады данному еву/</p>
+                    <p>Мы сделали самую красивую арену в Европе. Это открытие стало для нас прорывной точкой для разивтия на следующие десятилетия. Мы очень рады данному еву/</p>
                 </div>
             </div>
         </div>
