--- a/HW(Les20 - canvas)/index.html
+++ b/HW(Les20 - canvas)/index.html
@@ -16,11 +16,16 @@
 <body>
     <h1>Canvas</h1>
     <div class="container">
-        <div class="btn">
+        <div class="mov">
             <button class="top"><i class="fa-duotone fa-solid fa-square-caret-up"></i></button>
             <button class="down"><i class="fa-duotone fa-solid fa-square-caret-down"></i></button>
             <button class="left"><i class="fa-duotone fa-solid fa-square-caret-left"></i></button>
             <button class="right"><i class="fa-duotone fa-solid fa-square-caret-right"></i></button>
+        </div>
+        <div class="figure">
+            <button class="triangle"><i class="fa-solid fa-triangle"></i></button>
+            <button class="rectangle"><i class="fa-solid fa-rectangle"></i></button>
+            <!-- логика работает, но почему-то не ставятся кнопки "i"... -->
         </div>
     </div>
     <canvas width="800" height="500">Браузер не поддерживает канвас</canvas>
